# turtle-toolkit

./: .gitignore  .python-version  README.md  benchmark.prof  profile_output.lprof  profile_output_2025-05-16T234501.txt  pyproject.toml  ttl-cpu  turtle-toolkit
.devcontainer/: Dockerfile  devcontainer.json
examples/: large_multiplication_benchmark.asm  large_multiplication_benchmark.binstr.txt  large_multiplication_benchmark.hexstr.txt  load_store_different_address.asm  load_store_different_address.binstr.txt  load_store_different_address.hexstr.txt
profiling/: benchmark.prof
src/simulator/: add.py  assembler.py  cli.py  logger.py  main.py  simulator.py
src/simulator/common/: cli.py  config.py  data_types.py  instruction_data.py  logger.py
src/simulator/modules/: alu.py  base_memory.py  base_module.py  data_memory.py  decoder.py  instruction_memory.py  program_counter.py  register_file.py
src/turtle_toolkit/: __init__.py  assembler.py  benchmark.py  main.py  simulator.py
src/turtle_toolkit/common/: cli.py  config.py  config.yml  data_types.py  instruction_data.py  logger.py  singleton_meta.py
src/turtle_toolkit/modules/: alu.py  base_memory.py  base_module.py  data_memory.py  decoder.py  instruction_memory.py  program_counter.py  register_file.py
tests/: binary_macros.py  test_add.py  test_alu.py  test_assembler.py  test_branch_conditions.py  test_data_memory.py  test_data_types.py  test_decoder.py  test_instruction_memory.py  test_program_counter.py  test_register_file.py  test_simulator.py
