[project]
name = "simulator"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom Riley",email = "tomdriley@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "simulator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
