[project]
name = "simulator"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom Riley",email = "tomdriley@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "simulator", from = "src"}]

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
mypy = "^1.15.0"
pytest = "^8.3.5"
flake8 = "^7.2.0"
black = "^25.1.0"
coverage = "^7.8.0"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
