[project]
name = "turtle_toolkit"
version = "0.1.0"
description = "Assembler and Simulator for the Turtle CPU ISA"
authors = [
    {name = "Tom Riley",email = "tomdriley@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "turtle_toolkit", from = "src"}]

[project.scripts]
turtle-toolkit = "turtle_toolkit.main:main"
benchmark = "turtle_toolkit.benchmark:main"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
mypy = "^1.15.0"
pytest = "^8.3.5"
flake8 = "^7.2.0"
black = "^25.1.0"
coverage = "^7.8.0"
pytest-cov = "^6.1.1"
types-pyyaml = "^6.0.12.20250402"
isort = "^6.0.1"
snakeviz = "^2.2.2"
line-profiler = "^4.2.0"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["turtle_toolkit"]

